--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="">lien 1</a></li>
+            <li><a href="">lien 2</a></li>
+            <li><a href="">lien 3</a></li>
+        </ul>
+    </nav>
     <h1>Learn how to use git's Branch </h1>
 </body>
 </html>
