--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>Learn how to use git's Branch </h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+        Nesciunt dolorum cum delectus aliquid consequuntur a error qui quisquam ea sequi culpa eaque, 
+        laboriosam, labore asperiores odit! 
+        Doloremque sequi quos porro?
+
+    </p>
 </body>
 </html>
